# threads-nextjs

./: .dockerignore  .env.example  .env.test  .gitignore  .gitmodules  .madgerc  .prettierignore  @plan.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOY_BUTTON.md  Dockerfile  Justfile  MULTI_AGENT_SYSTEM.md  PLAN_ARCHIVE.md  README.md  SESSION_SUMMARY.md  SETUP.md  Tiltfile  auth.ts  docker-compose-prod.yml  docker-compose.yml  middleware.ts  package-scripts.md  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  seed_posts.json  seed_users.json  setup-github-secrets.md  vitest.config.ts  vitest.config.ui.ts  vitest.setup.ts  vitest.setup.ui.ts  zbpack.json  zeabur.yaml
.claude/: @chief-architect-context.md  CLAUDE.md  SESSION_SUMMARY  SESSION_SUMMARY.md  SESSION_SUMMARY_ARCHIVE.md
app/: globals.css  layout.tsx  page.tsx  providers.tsx
argocd/: README.md  repo-config.yaml  threads-app.yaml
backend/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
components/: create-post-form.tsx  create-post-trigger.tsx  empty-search-state.tsx  feed-tabs.tsx  feed.tsx  forgot-password-form.tsx  login-form.tsx  nav-sidebar.tsx  post-card.tsx  posts-list.tsx  (+16 more)
ml-service/: .dockerignore  .env.example  .gitignore  @ml-architect-context.md  AGENT_SETUP.md  Dockerfile  Dockerfile.dagster  README.md  SESSION_SUMMARY.md  TEST_VERIFICATION.md  check_data.py  collaborative_filter_recommander.md  dagster.yaml  docker-compose.yml  pyproject.toml  ruff.toml  test_ml_recommendations.py  workspace.yaml
ml-service/.claude/: README.md  ml-architect-agent-prompt.md
ml-service/.serena/: project.yml
ml-service/app/: main.py
ml-service/app/application/dto/: recommendation_dto.py
ml-service/app/application/use_cases/: generate_recommendations.py
ml-service/app/domain/entities/: interaction.py  post.py  recommendation.py  user.py
ml-service/app/domain/factories/: __init__.py  fake_user_factory.py
ml-service/app/domain/repositories/: interaction_repository.py  post_repository.py
ml-service/app/domain/services/: llm_interface.py  recommender_interface.py
ml-service/app/infrastructure/database/: connection.py  interaction_repository_impl.py  models.py  post_repository_impl.py  queries.py
ml-service/app/infrastructure/llm/: __init__.py  ollama_service.py
ml-service/app/infrastructure/ml/: collaborative_filter.py
ml-service/app/presentation/api/: dependencies.py
ml-service/app/presentation/api/routers/: recommendations.py
ml-service/app/presentation/schemas/: recommendation_schemas.py
ml-service/docs/: collaborative_filtering.md
ml-service/ml-service/tests/unit/: test_dagster_assets.py
ml-service/scripts/: generate_fake_interactions.py
ml-service/tests/: conftest.py
ml-service/tests/e2e/: test_dagster_simulation.py  test_health.py  test_recommendations_api.py
ml-service/tests/integration/: test_database_queries.py  test_fake_user_factory.py  test_ollama_connectivity.py  test_ollama_service.py
ml-service/tests/unit/: test_collaborative_filter.py
ml-service/threads_ml_dagster/: __init__.py  definitions.py
ml-service/threads_ml_dagster/load_generation/assets/: __init__.py  fake_users.py  interactions.py  posts.py
ml-service/threads_ml_dagster/load_generation/jobs/: __init__.py  continuous.py  manual.py
ml-service/threads_ml_dagster/load_generation/resources/: __init__.py  db.py  ollama.py
ml-service/threads_ml_dagster/load_generation/schedules/: __init__.py  continuous_schedule.py
(+292 files in other folders)
